# flight_finder

./: .gitignore  README  README.md
dj80hd/Media-Monkey/: AppendAlbum.vbs  AppendTitle.vbs  AutoIncCustom1.vbs  InitAlbumArtist.vbs  Scripts.ini  TagScript.vbs
dj80hd/boc/: mixwidget5.html  mixwidget5b.html
dj80hd/mp3/: test.py
dj80hd/mybats/: copyfromkr8.bat  copytokr8.bat  foo.tcl  npp.bat  replacedir.bat  scripts.bat  setproxy.bat  tcl.bat  unsetproxy.bat  vi.bat  wintermute.bat  workspace.bat  zebcopy.bat
dj80hd/scripts/: allmp3.rb  bubble.rb  bursty.rb  clean_filenames_for_DVD_burn.rb  cleanid3tags.rb  cleansvn.rb  consolidate_and_bubble.rb  crypt.rb  delete_dup_files_from_mediamonkey_csv.rb  deleteall.rb  diffdir.rb  dir2tracklist.rb  extract_links.rb  extractmp3s.rb  find_dup_files.rb  find_mp3_dups.rb  finddupmp3s.rb  flatdircopy.rb  folder2m3u.rb  grepall.rb  httptest.rb  join_m3u.rb  jrw.php  jrw.pl  jrw_utils.rb  m3u2folder.rb  m3uclean.php  m3urandom.rb  m3usplitter.rb  m3uverify.rb  mailtest.rb  makeall.rb  mergedir.rb  mergedir2.rb  mergedir_zeb.rb  moveallm4a.rb  movefolder2m3u.rb  mp3dir.rb  mp3example.rb  mymp3info.rb  (+17 more)
dj80hd/sts/: example.py  sts.py  sts.sh  (+2 more)
flight_finder/: Flight.py  FlightFinder.py  FlightFinderMulti.py  FlightRequest.py  ITACalendar.py  ITADao.py  ITATrips.py  Rest.py  Trip.py  info.txt  info2.txt  ita_rr
hgf/: .gitignore
severian/dcpu-16/: .gitignore  LICENSE  MAKEFILE  README  dcpu.cabal  test.asm
severian/dcpu-16/src/c/: dcpuvm.c  disassemble.c
severian/dcpu-16/src/haskell/: Assembler.hs  Main.hs  Parser.hs
(+485 files in other folders)
