Version:                0.1
name:                   dcpu
Description:            Toolchain for working with Notch's DCPU-16 architecture
License:                BSD3
Author:                 Aaron Brenzel
Build-Type:             Simple
Cabal-Version:          >= 1.2

Executable dcpu-asm
    Hs-Source-Dirs:     src/haskell
    Other-modules:      Parser, Assembler
    Main-is:            Main.hs
    Build-Depends:      stm,parsec,base,containers,bytestring,haskell98,binary,
                        ghc,regex-compat